Fixed spacing between items and header

--- a/style.css
+++ b/style.css
@@ -112,12 +112,14 @@ p::first-letter {
 
 @media only screen and (max-width: 768px) {
   .todo-list-header {
+    margin: 0 0 9rem 0;
     font-size: 3rem;
   }
   .todo-list-container {
     padding: 2rem;
   }
   .todo-list-item {
+    margin: 0 0 2rem 0;
     height: auto;
   }
   .todo-list-item__text {
